Revert "fix(notes): height text truncate line"
This reverts commit ca93fe3704f92ebfd476fdb45fb7deb2e814487d.

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -42,7 +42,7 @@ a.btn-purple:hover {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     overflow: hidden;
-    height: auto;
+    height: 50px;
 }
 
 .btn-export-csv:hover {
@@ -53,5 +53,6 @@ a.btn-purple:hover {
 @media screen and (max-width: 500px) {
     .text-truncate-line-clamp-2 {
         -webkit-line-clamp: 6;
+        height: auto;
     }
 }
